--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
     "    formatted_string = (f'{index+1} {city_names[index]}')\n",
-    "    names_and_ranks.append(formatted_string)\n",
+    "    names_and_ranks.append\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
